fixed styles broken on bulma 0.6.2 upgrade

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -143,6 +143,15 @@ p#player-cover-header
 
 */
 
+div.spieldose-tabs-without-margin-bottom
+{
+    margin-bottom: 0rem !important;
+}
+
+.spieldose-margin-top-1rem
+{
+    margin-top: 1rem !important;
+}
 
 /* sidebar player controls */
 
